# ceu-cloud-class

./: .gitignore  README.md  _config.yml  apachespark.md  aws.md  big_data_history.md  cloud_computing.md  further-resource_tamas.md  further-resources-abdu.md  further-resources.md  internet.md  pyproject.toml  requirements.in  requirements.txt  resources.md  serverless.md  spark-continued.md  sparkAPI.md  spark_internals.md  spark_optimizations.md  spark_overview.md  split_text.py  sync.sh  test.md  tox.ini  update_lecture3.py  week1.html  week1.md  week2.md  week_2.html
.admin/: apply_policies.sh  athena_delete_everything.py  cleanup_all.sh  create_users.sh
.devcontainer/: Dockerfile  build-and-push.sh  devcontainer.json  requirements.in  setup-container.sh  setup-terminal.sh
Serverless_Rmds/: Amazon_Comprehend.Rmd  Amazon_Polly.Rmd  Amazon_S3.Rmd  Amazon_Translate.Rmd  Web_Scraping.Rmd  accessKeys.csv  aws_comprehend_5000-byte.Rmd
encryption/: create_public_key.md  cryptography.R  hashing.ipynb  hashing.py  password-manager.R  password_manager.ipynb  password_manager.py  public_key_cryptography.ipynb  public_key_cryptography.py  symmetric_encryption.ipynb  symmetric_encryption.py
exercises/: 1_web_scraping_summary.py  2_in-class_exercises.py  3_homework.py
homework/: check_submission.py
lecture_notes/: lecture1_basics.md  lecture2_AWS.md  lecture3_Serverless.md  lecture4_Athena.md  resources.md
pipeline/: 1-create-database.sql  1_create_database.sql  2-bronze-edits.sql  2_bronze_edits.sql  2_raw_edits.sql  3-create-silver-edits.sql  3_edits_view.sql  3_silver_edits.sql  4-update-silver-edits.sql  ASSIGNMENT.md  extract-edits.R  extract-edits.py  extract_edits.ipynb  extract_edits.py  lambda_extract_edits.py
scripts/: cryptography.R
serverless/: 1_s3.ipynb  1_s3.py  1_storage.py  2_translate.ipynb  2_translate.py  (+21 more)
(+26 files in other folders)
