[project]
name = "ceu-cloud-class"
version = "0.1.0"
description = "CEU Cloud Class"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4~=4.14.2",
    "black~=25.9.0",
    "boto3~=1.40.64",
    "flake8~=7.3.0",
    "jupyter~=1.1.1",
    "isort~=7.0.0",
    "caesarcipher~=1.0",
    "pycryptodome~=3.23.0",
    "python-dotenv~=1.2.1",
    "click~=8.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.0",
    "nbconvert~=7.16.0",
]

[tool.isort]
profile = "black"
src_paths = ["."]
honor_noqa = true

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E701", "E501"]
exclude = ["__pycache__", "venv", ".venv"]


[tool.mypy]
exclude = ['venv/*', 'serverless/*']

disallow_untyped_defs = true  # Disallows defining functions without type annotations or with incomplete type annotations.
disallow_any_unimported = false # Disallows importing objects whose type is Any from modules that do not have an explicit annotation.
warn_return_any = true # Warns if a function whose return type is not annotated returns an expression of type Any.
no_implicit_optional = true # Disallows implicit Optional types in function signatures.
check_untyped_defs = true # Type-checks the interior of functions without type annotations.
show_error_codes = true # Shows the error codes in the error messages.
warn_unused_ignores = true # Warns about unused '# type: ignore' comments.
ignore_missing_imports = true # Ignores imports that are missing a type annotation.
ignore_missing_imports_per_module = true # This is a workaround for https://github.com/python/mypy/issues/10709
strict_equality = true # Disallows comparing an expression of type Any to a literal, as this is often a bug.

